--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wxb0fe31c3d45e8a9e",
+	"appid": "wxf8d983ac3a653503",
 	"projectname": "kongtiao",
 	"debugOptions": {
 		"hidedInDevtools": []
