--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "pages":[
-    "pages/login/index",
+    "pages/address_edit/index",
+    "pages/address/index",
+    "pages/repairPayment/index",
     "pages/repair/index",
+    "pages/login/index",
+    
     "pages/index/index",
     "pages/logs/logs"
     
